<resources>
    <string name="app_name">NFT</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>


    <!-- main activity-->
    <string name="lead" translatable="false">Leading NFT</string>
    <string name="market" translatable="false">Marketplace</string>
    <string name="desc" translatable="false">Simplify your crypto collectibels and non-fungible (NFT) transaction. Discover, buy, and sell all latest and exclusive digital items</string>
    <string name="Reg">Register</string>
    <string name="Sign">Sign In</string>
    <!-- signin-->
    <string name="lets" translatable="false">Let\'s sign you in.</string>
    <string name="welkom" translatable="false">Welcome back.</string>
    <string name="you" translatable="false">You\'ve been missed!</string>
    <string name="email" translatable="false">Email</string>
    <string name="pass" translatable="false">Password</string>
    <string name="does">Does not have account? </string>
    <string name="login">Login</string>
    <!-- Register-->
    <string name="lets1" translatable="false">Let \'s create your</string>
    <string name="acc" translatable="false">Account</string>
    <string name="user" translatable="false">Username</string>
    <string name="conpass" translatable="false">Confirm password</string>
    <string name="alre">Already have an account?  </string>
    <!-- Add-->

    <string name="sell" translatable="false">Sell your best NFT.</string>
    <string name="and" translatable="false">And get the result</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="Add">Add</string>
    <!-- detail-->
    <string name="act">Item Activity</string>
    <string name="buy">Buy Now</string>
    <!-- detail-->
    <string name="pri">price</string>
    <string name="nam">name</string>
    <!-- detail-->
    <string name="log">Log Out</string>
    <!-- detail coll-->
    <string name="down">Download</string>
    <string name="sen">Sell Now</string>
    <!-- menu-->
    <string name="res">My Resource</string>
    <string name="home" translatable="false">Home</string>
    <string name="prof">Profile</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>





</resources>