<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18171F"
    tools:context=".Register">

    <Button
        android:id="@+id/logot"
        android:layout_width="316dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Reg"
        android:textAllCaps="false"
        android:textColor="#323038"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="148dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="right"
        android:letterSpacing="0"
        android:text="@string/lets1"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="right"
        android:letterSpacing="0.1"
        android:text="@string/acc"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#A1FFFFFF"
        android:textColorHint="#A1FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#A1FFFFFF"
        android:textColorHint="#A1FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/pass"
        android:paddingLeft="20dp"
        android:textColor="#A1FFFFFF"
        android:textColorHint="#A1FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/conpass"
        android:paddingLeft="20dp"
        android:textColor="#A1FFFFFF"
        android:textColorHint="#A1FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="-20dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/alre"
        android:textColor="#A1FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/Sign"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

</androidx.constraintlayout.widget.ConstraintLayout>