<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17181F"
    tools:context=".detcoll">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picnftt"
        app:srcCompat="@drawable/eth" />

    <ImageView
        android:id="@+id/picnftt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/sell"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/pricc"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/pri"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/picnftt"
        tools:textColorHint="@color/white" />

    <EditText
        android:id="@+id/namepicc"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custominput"
        android:ems="10"
        android:hint="@string/nam"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pricc"
        tools:textColorHint="@color/white" />

    <Button
        android:id="@+id/donlod"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sell" />


</androidx.constraintlayout.widget.ConstraintLayout>