<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17181F"
    tools:context=".Add">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/poppins_bold"
            android:letterSpacing="0.1"
            android:text="@string/sell"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:fontFamily="@font/poppins_medium"
            android:letterSpacing="0.1"

            android:text="@string/and"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="20dp">

            <ImageView

                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="#A1FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_image_24" />

        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/name"
                android:layout_width="316dp"
                android:layout_height="50dp"
                android:background="@drawable/custominput"

                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="#A1FFFFFF"
                android:textColorHint="#A1FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">

            <EditText
                android:id="@+id/email"
                android:layout_width="316dp"
                android:layout_height="50dp"
                android:layout_marginTop="-30dp"
                android:background="@drawable/custominput"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="number"
                android:textColor="#A1FFFFFF"
                android:textColorHint="#A1FFFFFF"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="316dp"
                android:layout_height="63dp"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/Add"
                android:textAllCaps="false"
                android:textColor="#323038"
                android:textSize="16sp"
                app:cornerRadius="15dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>